:first commit from isk

--- a/real_agent_01.ipynb
+++ b/real_agent_01.ipynb
@@ -13,7 +13,8 @@
     "    owned_by :: Int32 # id of household who owns it \n",
     "    price_previous :: Int32\n",
     "    price_current :: Int32\n",
-    "end"
+    "end\n",
+    "#"
    ]
   },
   {
@@ -175,9 +176,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 6 threads 1.8.5",
+   "display_name": "Julia 1.8.5",
    "language": "julia",
-   "name": "julia-6-threads-1.8"
+   "name": "julia-1.8"
   },
   "language_info": {
    "file_extension": ".jl",
