--- a/jl_ver/ipynb_ver/main.ipynb
+++ b/jl_ver/ipynb_ver/main.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "1. The purpose and patterns I was looking for was a change in price should be endogenous to the model, once initial input parameters were allocated.  The difficulty highlighted in the thesis by Carstensen above, was that other published ABM real estate models simply assumed that there was a match in the initial state of housing buyers and sellers.\n",
     "\n",
-    "2. The assumption was that all housing market activity was going to be initiated by income in some way. This model concentrates only on rental situations, that is, household rental (landlords' offers) and tenancies (agent bids). The state variables are the global variables which were predefined, such as interest rate, inflation rate, agent population size (i.e. number of households). During the whole course of development, I considered scale of population to be the main factor to increase in order for the simulation to take advantage of HPC concepts. This meant that initially, during the testing phases small percentages such as 0.006% of the total number of households was modelled, and this can be increased if there was no compute or memory-bound to 50%. The difficulty with the current model scaling beyond 50% is a question of current algorithm definition (which can be reworked): if 50% of households are renters, then 50% of households are the landlords. Currently, the market is a one-good economy, i.e. it only considers renters and rentals. In the Julia code, the renters are prefixed as agents_ their corresponding abilities to spend are prefixed as budget_ and the rentals/tenancies are prefixed as house_. The next idea of scale is to consider the multifarious goods and services available, the current model definition allows for such scaling, i.e. it is not idiosyncratic to housing market along, but since housing accounts for somewhere between 26-30% of disposable income, it would be the first to consider. If statistical data of other expenditures, e.g. transport expenditure of private hire cars were available, it is straightforward to extend the same model, albeit with a smaller time scale to model the transport expenditure market."
+    "2. The assumption was that all housing market activity was going to be initiated by income in some way. This model concentrates only on rental situations, that is, household rental (landlords' offers) and tenancies (agent bids). The state variables are partly the global variables which were predefined, such as interest rate, inflation rate, agent population size (i.e. number of households), the next group of state variables relate to the idea of \"market\", that is what are the bid and ask prices. During the whole course of development, I considered scale of population to be the main factor to increase in order for the simulation to take advantage of HPC concepts. This meant that initially, during the testing phases small percentages such as 0.006% of the total number of households was modelled, and this can be increased if there was no compute or memory-bound to 50%. The difficulty with the current model scaling beyond 50% is a question of current algorithm definition (which can be reworked): if 50% of households are renters, then 50% of households are the landlords. Currently, the market is a one-good economy, i.e. it only considers renters and rentals. In the Julia code, the renters are prefixed as agents_ their corresponding abilities to spend are prefixed as budget_ and the rentals/tenancies are prefixed as house_. The next idea of scale is to consider the multifarious goods and services available, the current model definition allows for such scaling, i.e. it is not idiosyncratic to housing market along, but since housing accounts for somewhere between 26-30% of disposable income, it would be the first to consider. If statistical data of other expenditures, e.g. transport expenditure of private hire cars were available, it is straightforward to extend the same model, albeit with a smaller time scale to model the transport expenditure market."
    ]
   },
   {
@@ -52,7 +52,7 @@
    "id": "49c01d1b-db0d-4c56-950d-7845d6a2b63c",
    "metadata": {},
    "source": [
-    "3. The simulation starts by collecting input data (in our case, household income ranked by poorest to richest decile, this is readily available from Singapore Statistics department <a href=https://www.singstat.gov.sg/find-data/search-by-theme/households/household-income/latest-data> SingStat website</a>. Retrieving data in <b>deciles</b> was motivated by an earlier attempt to look at world income from this dataset: <a href=https://github.com/jackblun/Globalinc/blob/master/GCIPrawdata.csv> from the Global Consumption and Income Project </a>, where the hope was once the model was successful, it could be re-run on the nearly 5000 other datapoints of historically proven data, and see if there were opportunities to learn from the 30-year evolution of such figures in each of the countries charted. After the monthly household income has been loaded into the respective deciles, a population sample size is chosen, and a random sampling process distributes individual agent budgets to make up the nominal size of the whole agent population being simulated, The market model, which is the recurring simulation cycle that will be describe in more detail below, takes place and at the end of each cycle, an updated graph of rental bid and ask prices is displayed. Note that at the data initialisation stage, the household rental offer prices, which are also sampled in deciles, are based on a presumed uppermost and lowermost house sale price.  Note the house-sale price is between $\\$$ 50,000 and about $\\$$ 4+ million at the midpoint of the lowermost and uppermost decile.\n"
+    "3. The simulation starts by collecting input data (in our case, household income ranked by poorest to richest decile, this is readily available from Singapore Statistics department <a href=https://www.singstat.gov.sg/find-data/search-by-theme/households/household-income/latest-data> SingStat website</a>. Retrieving data in <b>deciles</b> was motivated by an earlier attempt to look at world income from this dataset: <a href=https://github.com/jackblun/Globalinc/blob/master/GCIPrawdata.csv> from the Global Consumption and Income Project </a>, where the hope was once the model was successful, it could be re-run on the nearly 5000 other datapoints of historically proven data, and see if there were opportunities to learn from the 30-year evolution of such figures in each of the countries charted. After the monthly household income has been loaded into the respective deciles, a population sample size is chosen, and a random sampling process distributes individual agent budgets to make up the nominal size of the whole agent population being simulated, The market model, which is the recurring simulation cycle that will be describe in more detail below, takes place and at the end of each cycle, an updated graph of rental bid and ask prices is displayed. Note that at the data initialisation stage, the household rental offer prices, which are also sampled in deciles, are based on a presumed uppermost and lowermost house sale price.  Note the house-sale price is between \\\\$50000 to \\\\$4 million at the midpoint of the lowermost and uppermost decile.\n"
    ]
   },
   {
@@ -93,7 +93,7 @@
    "id": "c9d75e3f-9ab6-4301-b49e-f6697962167a",
    "metadata": {},
    "source": [
-    "The following table is the first run resultof the \"market scoreboard\" after the bids have been allocated, each row index corresponds to the particular housing which is on the market, with row 1 being the cheapest and subsequent row numbers increasing in price, the housing which remains unallocated does not appear on the scoreboard in the first two columns, i.e. the entry is 0. There is a possibility of duplicate entries on column 2, reason being the PDF from the particular agent (e.g. agent 2) allows it to choose both housing number 6 and 7, however each run of the loop will only allocate one housing per agent.  The last column, which relates to \"market visibility\" records the potential <b>bid</b> prices submitted by the agents which is winning in a second round of non-allocative auction <p><img src=\"market_scoreboard.png\" width=260px>"
+    "The following table is the first run result of the \"market scoreboard\" after the bids have been allocated, each row index corresponds to the particular housing which is on the market, with row 1 being the cheapest and subsequent row numbers increasing in price, the housing which remains unallocated does not appear on the scoreboard in the first two columns, i.e. the entry is 0. There is a possibility of duplicate entries on column 2, reason being the PDF from the particular agent (e.g. agent 2) allows it to choose both housing number 6 and 7, however each run of the loop will only allocate one housing per agent.  The last column, which relates to \"market visibility\" records the potential <b>bid</b> prices submitted by the agents which is winning in a second round of non-allocative auction <p><img src=\"market_scoreboard.png\" width=260px>"
    ]
   },
   {
@@ -101,7 +101,7 @@
    "id": "7cd6a660-9a98-4e97-bba4-9cc1af37553a",
    "metadata": {},
    "source": [
-    "From here on, we look at the source code itself."
+    "### From here on, we walk through the source code itself."
    ]
   },
   {
@@ -136,9 +136,13 @@
    "id": "a24bd3e4-4b4c-4b08-9414-8972af49d45c",
    "metadata": {},
    "source": [
-    "In order not to crowd the main source file with too much boilerplate data initialisation code, the modules Load_Income.jl and Initialise_Data.jl contain the code to load the desired .CSV file, extrapolate the mean income in each decile into the preferred sample size.\n",
+    "In order not to crowd the main source file with too mundane data initialisation code, the modules Load_Income.jl and Initialise_Data.jl contain the code to load the desired .CSV file, extrapolate the mean income in each decile into the preferred sample size.\n",
     "\n",
-    "The Model_Functions.jl "
+    "The <b>Model_Functions.jl</b> consolidates the functions which were made from assumptions of how the statistical data was extrapolated, such as how to derive rental budget from the highest and lowest mean household income. Income leads to savings and expenditures, of which housing is a part of expenditure, and housing expenditure is basically going to be either house mortgage or rentals. Hence the assumption is that rental ask-prices will also be based on the presumed mortgage and prevailing inflation rate. \n",
+    "\n",
+    "The most critical function here in terms of scaling performance would be rent_probability, the PDF for each agent's choice basically. This means the algorithm will have to scale towards n x p x q PDF calculations, where n is the number of agents' budgets and p is the number of goods on each one-good market, q is the number of markets. It will be interesting if a large number of n can influce a particular p, or if various p have correlated pricing as we can observe in real life. This flexibility is to be considered in future work.  \n",
+    "\n",
+    "Since the PDF was important, there was an initial attempt at writing it as a custom CUDA kernel. This attempt was later discarded, as the results still needed to be copied to CPU memory in order to be sorted by CPU. Future work can either incorporate both sorting and PDF in the same function, should it be a GPU kernel, e.g. by carry out some form of partial sorting or basic inequality comparisons and return references to partially sorted values. "
    ]
   },
   {
@@ -184,12 +188,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18d34de8-b86a-4575-84d7-1b58ecc5e73c",
+   "cell_type": "markdown",
+   "id": "aa8bbfb1-5b41-42c4-b147-a45d841a3434",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The variable names were supposed to be self-explanatory.  Certain coefficients had to be introduced to maintain an approximate correlation of the model's pricing outputs with sparse empirical data. The more interesting two state variables here which is not yet explored are inflation and interest rate, which, after initialization should be endogenously derived from the market exchanges. "
+   ]
   },
   {
    "cell_type": "code",
@@ -221,14 +225,6 @@
     "    return\n",
     "end\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ee4ee710-6822-4912-9261-91f47d7b98d1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -405,6 +401,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "60e7ee96-0861-48f2-aa07-72cceb577616",
+   "metadata": {},
+   "source": [
+    "At this point, all the incomes and hence rental budgets, and house sale prices hence house rental prices have all been initialised, and if it can be efficiently processed by Plots, it will be plotted to compare the two vectors."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "f712feb1-265b-4a0a-bd74-b589e010427b",
@@ -478,20 +482,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "47568de7-663d-45ff-bb0f-367d7a439a35",
+   "cell_type": "markdown",
+   "id": "aeaaa6d5-05d2-4253-be07-fdeb2aacd5ed",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a75727de-610d-4ccf-bb00-2378debd085e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Side note: despite attempts at fitting the house sale prices, the upper half of the housing market in this model remains very much higher than affordable budgets. Since budget is based on empirical statistical data, I left the upper half of the curve of house prices as is.  Future work will have to look at how to better synthesize house prices for the more expensive properties, and more importantly, to see if they are subject to a different rental-price-setting function compared to below average price properties "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -515,6 +511,24 @@
    "metadata": {},
    "source": [
     "anim = @animate for i in 1:10\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb339fd0-a74d-4f2e-aacf-bcb6763a06cc",
+   "metadata": {},
+   "source": [
+    "above cell can be marked as code, if bottommost cell before conclusion is also marked as code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d8ff048-c2d3-4742-999f-3d71438da0e6",
+   "metadata": {},
+   "source": [
+    "This code block is the most critical part of the logic which defines the \"market\", how choices are made, and how buyers and sellers adjust their pricing after each round of matching bids.\n",
+    "\n",
+    "The first attempt at making adjustment of pricing here is based on a \"centroid\" idea, in each scoreboard described above there will be unallocated housing, the mean price of the allocated housing is calculated each round so that subsequent bids take steps towards the mean. This \"centroid\" idea is flawed when we apply it across the entire market, instead, it should be applied only to a range around the agents' budgets. Also the time-cost of non-allocation is not implemented here. Logically, the most expensive housing left \"on the shelf\" should suffer some valuation penalty with each foregone rent, also the agents' with least budgets may simply have to exit this market, to join a different market of goods (e.g. perhaps some social housing market, or exit from the market completely via emigration to another market)  "
    ]
   },
   {
@@ -570,14 +584,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "28d2277d-73aa-488d-bd12-db2b5609287d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "id": "e10833e9-63ff-4577-9bd7-004480101bab",
    "metadata": {},
@@ -606,12 +612,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0cd82dfa-d0a3-4c3f-bff1-0646d4947f12",
+   "cell_type": "markdown",
+   "id": "c8740245-2a76-4969-9c1f-83287443fc4c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "This is where the centroid of allocated properties (where zero weightage is given to non-allocated properties) gives us a substantially lower mean housing price"
+   ]
   },
   {
    "cell_type": "code",
@@ -644,12 +650,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "02c2fef1-f4d3-4a00-a9e0-45541879ef4b",
+   "cell_type": "markdown",
+   "id": "0bf9e4b9-ab12-4ff1-8a36-ace305291a10",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "The agents who have not been allocated any housing have to adjust their budgets"
+   ]
   },
   {
    "cell_type": "code",
@@ -718,14 +724,6 @@
     "end\n",
     "#vscodedisplay(agent_budgets) ##\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "af8a3a41-c8ee-4962-830a-1845c29c6e6b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -823,12 +821,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97f14a55-e8f8-4ff3-ad92-391a64fd07e4",
+   "cell_type": "markdown",
+   "id": "601eb5bb-e000-4775-821d-ffa4c3206ded",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "10 rounds of market evolutions. Looking at the chart movements, I think this output should actually be 'learnt' in some way by rational agents. I.e. each agent actually has a small predictive model they run in their heads when they make purchase decisions, such choice mechanism is not simple like the PDF described earlier"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -841,9 +839,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0d36db18-f37f-4313-b618-ddeecc4e680f",
+   "metadata": {},
+   "source": [
+    "### Conclusion\n",
+    "\n",
+    "The HPC course has been most rewarding in terms of studying and testing assumptions about how slow-moving real estate market dynamics could work, also in a situation where there is not price transparency across the whole market, unlike a stock exchange for example. The most interesting aspects of HPC which could be applied seem to be simulation of buyer/seller choice functions. Basic optimization has been applied throughout the Julia code, such as clamping the variable to integer values where possible. Future work can build upon such basic data structures, but explore how they can scale up to arrays of large numbers of columns (e.g. hundreds of millions of columns) where each cluster of column can refer to indices of goods, agents as well as prices, since price decisions are made from whole numbers"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2415a8af-a561-418a-bbda-a450d2754025",
+   "id": "53216ccb-c3ee-4ca2-9719-1a1cbfbdc382",
    "metadata": {},
    "outputs": [],
    "source": []
